Ref 2 comment 4. Second half, best practices for parameter estimates added.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -207,7 +207,7 @@ The influence of the number of captures and animal movement models on accuracy a
 
 \subsection*{Analytical model}
 
-The equation for $\bar{p}$ has been newly derived for each submodel in the gREM, except for the gas model and REM which have been calculated previously. However, many models, although derived separately, have the same expression for $\bar{p}$. Figure~\ref{f:equalModelResults} shows the expression for $\bar{p}$ in each case. The general equation for density, \ref{e:gas}, is used with the correct value of $\bar{p} substituted. Although more thorough checks are performed in Appendix S3, it can be seen that all adjacent expressions in Figure~\ref{f:equalModelResults} are equal when expressions for the boundaries between them are substituted in.
+The equation for $\bar{p}$ has been newly derived for each submodel in the gREM, except for the gas model and REM which have been calculated previously. However, many models, although derived separately, have the same expression for $\bar{p}$. Figure~\ref{f:equalModelResults} shows the expression for $\bar{p}$ in each case. The general equation for density, \ref{e:gas}, is used with the correct value of $\bar{p}$ substituted. Although more thorough checks are performed in Appendix S3, it can be seen that all adjacent expressions in Figure~\ref{f:equalModelResults} are equal when expressions for the boundaries between them are substituted in.
 
 \begin{figure}
 	\centering
@@ -290,7 +290,7 @@ The precision of the gREM is greatly affected by the number of captures. The coe
 
 The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks). It is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and we expect that the long duration of our simulations has obscured this. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
 
-In our simulations we have assumed perfect parameter estimates. However, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is system dependant. 
+In our simulations we have assumed perfect estimates of parameter values. While estimates will never be perfect, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is taxon dependant although there are many commonalities. Estimates of $r$ can be measured directly or calculated using physical acoustic models (e.g. \citep{holderied2003echolocation}) while the sensor angle is often easily measured \citep{adams2012you}. Call directionality has been measured using arrays of microphones \citep{brinklov2011} though the measurements are rarely of $\alpha$ exactly. When estimating $v$ the measure used should be relevant to the timing of a survey; if a survey is continually running, then day range may be a good measures \citep{carbone2005far} whereas if a survey is only conducted when a species is active (e.g. dawn-dusk bat surveys) then estimates of the actual speed of movement may be more appropriate. 
 
 \subsection*{Limitations}
 Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
