--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -297,6 +297,8 @@ Although we have used simulations to validate the gREM submodels, much more robu
 
 Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation animals moved at a speed of $\SI{40}{\kilo\meter \per \day}$, equivalent to the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
 
+Occupancy modelling may be another methodology available where individuals cannot be told part. There have been a number of extensions to the basic model \citep{bailey2013advances}, including methods which estimate absolute abundance \citep{royle2003estimating}. These models make assumptions about distributions of captures, and require careful study design. Whilst occupancy models that estimate abundance would be suited to a well-understood system, inappropriate model choices or study design can affect the robustness of the study \citep{royle2003estimating}. The gREM has the advantage of being simple and easily understood, relative to these occupancy models, not requiring the use of Bayesian methodology or the choice of statistical distributions for encounter rates. We feel that the gREM therefore would be the most appropriate choice in many study areas. 
+
 \subsection*{Implications for ecology and conservation}
 The gREM can estimate densities of a number of taxa where no, or few, accurate methods currently exist to measure absolute animal density and trends in absolute abundances \citep{thomas2012passive}. Many of these species are critically endangered and monitoring their populations is of conservation interest. For example, current methods of density estimation for the threatened Francisana dolphin (\emph{Pontoporia blainvillei}) may result in underestimation of their numbers \citep{crespo2010abundance}. Our method may also be important for understanding zoonotic diseases, for example estimating population sizes of echolocating bats, which are an important reservoir of infectious disease that affect humans, livestock and wildlife \citep{calisher2006bats}. In addition, the gREM will make it possible to measure the density of animals which may be useful in quantifying ecosystem services, such as studying the levels of songbirds which are known to have a positive influence on pest control in coffee production \citep{jirinec2011roosting}. The gREM is suitable for any species that would be consistently recorded within range of a detector, such as echolocating bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. With increasing technological capabilities, this list of species is likely to increase dramatically. Finally, the passive sensor methods that the gREM use are noninvasive and do not require individual marking \citep{jewell2013effect} or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive}. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch \citep{thomas2012passive}.
 
