--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-23 16:44:38 +0100 
+%% Created for Elizabeth Moorcroft at 2014-11-27 14:07:45 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bailey2013advances,
+	Author = {Bailey, Larissa L and MacKenzie, Darryl I and Nichols, James D},
+	Date-Added = {2014-11-27 14:07:27 +0000},
+	Date-Modified = {2014-11-27 14:07:27 +0000},
+	Journal = {Methods in Ecology and Evolution},
+	Publisher = {Wiley Online Library},
+	Title = {Advances and applications of occupancy models},
+	Year = {2013}}
 
 @incollection{walters2013challenges,
 	Author = {Walters, Charlotte L and Collen, Alanna and Lucas, Tim and Mroz, Kim and Sayer, Catherine A and Jones, Kate E},
@@ -26,7 +35,7 @@
 	Date-Added = {2014-09-17 14:05:21 +0000},
 	Date-Modified = {2014-09-23 15:33:31 +0000},
 	Doi = {10.1002/9781118490747.ch10},
-	Editor = {Collen, B and Pettorelli, N and Baillie, J. E. M. and Durant, S. M. },
+	Editor = {Collen, B and Pettorelli, N and Baillie, J. E. M. and Durant, S. M.},
 	Isbn = {9781118490747},
 	Keywords = {global acoustic monitoring; indicator bats program (iBats); ultrasonic biodiversity; ultrasonic indicator},
 	Pages = {211--247},
@@ -78,10 +87,6 @@
 	Year = {2009},
 	Year1 = {2009},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1890/08-1494.1}}
-
-
-
-
 
 @article{hayes2000assumptions,
 	Author = {Hayes, John P},
