--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-11-27 14:07:45 +0000 
+%% Created for Elizabeth Moorcroft at 2014-11-27 14:50:56 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{royle2003estimating,
+	Author = {Royle, J Andrew and Nichols, James D},
+	Date-Added = {2014-11-27 14:08:12 +0000},
+	Date-Modified = {2014-11-27 14:08:12 +0000},
+	Journal = {Ecology},
+	Number = {3},
+	Pages = {777--790},
+	Publisher = {Eco Soc America},
+	Title = {Estimating abundance from repeated presence-absence data or point counts},
+	Volume = {84},
+	Year = {2003}}
 
 @article{bailey2013advances,
 	Author = {Bailey, Larissa L and MacKenzie, Darryl I and Nichols, James D},
