Progress on ref 2 comment 5 (which applies to ref 1 comment 1 as well).

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -100,6 +100,17 @@
 	Year1 = {2009},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1890/08-1494.1}}
 
+@article{mackenzie2005designing,
+  title={Designing occupancy studies: general advice and allocating survey effort},
+  author={MacKenzie, Darryl I and Royle, J Andrew},
+  journal={Journal of Applied Ecology},
+  volume={42},
+  number={6},
+  pages={1105--1114},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
 @article{hayes2000assumptions,
 	Author = {Hayes, John P},
 	Date-Added = {2014-09-17 13:06:17 +0000},
