Capitilization sorted in .bib

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -92,7 +92,7 @@
 	Number = {9},
 	Pages = {2648},
 	Publisher = {Ecological Society of America},
-	Title = {PanTHERIA: a species-level database of life history, ecology, and geography of extant and recently extinct mammals},
+	Title = {{PanTHERIA}: a species-level database of life history, ecology, and geography of extant and recently extinct mammals},
 	Ty = {JOUR},
 	Url = {http://dx.doi.org/10.1890/08-1494.1},
 	Volume = {90},
@@ -143,18 +143,31 @@
 	Number = {4},
 	Pages = {961--968},
 	Publisher = {Wiley Online Library},
-	Title = {Using multiple data sources provides density estimates for endangered Florida panther},
+	Title = {Using multiple data sources provides density estimates for endangered {Florida panther}},
 	Volume = {50},
 	Year = {2013}}
 
-@article{kelly2012noninvasive,
+
+@incollection{kelly2012noninvasive,
+	Address = {New York},
 	Author = {Kelly, Marcella J and Betsch, Julie and Wultsch, Claudia and Mesa, Bernardo and Mills, L Scott},
-	Date-Added = {2014-08-15 10:48:41 +0000},
-	Date-Modified = {2014-08-15 10:48:41 +0000},
-	Journal = {Carnivore ecology and conservation: a handbook of techniques (L. Boitani and RA Powell, eds.). Oxford University Press, New York},
+	Booktitle = {Carnivore ecology and conservation: a handbook of techniques},
+	Editor = {Boitani, L and Powell, RA},
 	Pages = {47--69},
-	Title = {Noninvasive sampling for carnivores},
+	Publisher = {Oxford University Press},
+	Title = {Noninvasive sampling for carnivores.},
 	Year = {2012}}
+
+
+@incollection{Dietz_1976,
+	Address = {Berlin},
+	Author = {Dietz, K},
+	Booktitle = {Mathematical Models in Medicine},
+	Editor = {Berger, J and Buhler, W and Repges, R and Tautu, P},
+	Pages = {1--15},
+	Publisher = {Springer-Verlag},
+	Title = {The incidence of infectious diseases under the influence of seasonal fluctuations.},
+	Year = {1976}}
 
 @article{jewell2013effect,
 	Author = {Jewell, Zoe},
@@ -176,7 +189,7 @@
 	Number = {1},
 	Pages = {205--215},
 	Publisher = {Springer},
-	Title = {Estimating density of a forest-dwelling bat: a predictive model for Rafinesque's big-eared bat},
+	Title = {Estimating density of a forest-dwelling bat: a predictive model for {Rafinesque's} big-eared bat},
 	Volume = {55},
 	Year = {2013}}
 
@@ -188,7 +201,7 @@
 	Number = {1},
 	Pages = {17--35},
 	Publisher = {Wiley Online Library},
-	Title = {Abundance and distribution of endangered Franciscana dolphins in Argentine waters and conservation implications},
+	Title = {Abundance and distribution of endangered {Franciscana dolphins} in {Argentine} waters and conservation implications},
 	Volume = {26},
 	Year = {2010}}
 
@@ -200,7 +213,7 @@
 	Number = {03},
 	Pages = {353--361},
 	Publisher = {Cambridge Univ Press},
-	Title = {Roosting behaviour of a migratory songbird on Jamaican coffee farms: landscape composition may affect delivery of an ecosystem service},
+	Title = {Roosting behaviour of a migratory songbird on {Jamaican} coffee farms: landscape composition may affect delivery of an ecosystem service},
 	Volume = {21},
 	Year = {2011}}
 
@@ -224,7 +237,7 @@
 	Number = {2},
 	Pages = {169--188},
 	Publisher = {BioOne},
-	Title = {Ecological investigations of grizzly bears in Canada using DNA from hair, 1995-2005: a review of methods and progress},
+	Title = {Ecological investigations of grizzly bears in {Canada using DNA} from hair, 1995-2005: a review of methods and progress},
 	Volume = {21},
 	Year = {2010}}
 
@@ -236,7 +249,7 @@
 	Number = {1},
 	Pages = {117--136},
 	Publisher = {Wiley Online Library},
-	Title = {Home range and habitat use by the serotine bat, Eptesicus serotinus, in England},
+	Title = {Home range and habitat use by the serotine bat, {Eptesicus} serotinus, in {England}},
 	Volume = {243},
 	Year = {1997}}
 
@@ -248,7 +261,7 @@
 	Number = {2},
 	Pages = {249--264},
 	Publisher = {Wiley Online Library},
-	Title = {Directionality in the whistles of Hawaiian spinner dolphins (Stenella longirostris): A signal feature to cue direction of movement?},
+	Title = {Directionality in the whistles of {Hawaiian spinner dolphins} (\emph{Stenella longirostris}): A signal feature to cue direction of movement?},
 	Volume = {19},
 	Year = {2003}}
 
@@ -260,7 +273,7 @@
 	Number = {2},
 	Pages = {137--150},
 	Publisher = {-},
-	Title = {Use of ultrasound detectors for bat studies in Europe: experiences from field identification, surveys, and monitoring},
+	Title = {Use of ultrasound detectors for bat studies in {Europe}: experiences from field identification, surveys, and monitoring},
 	Volume = {1},
 	Year = {1999}}
 
@@ -331,7 +344,7 @@
 	Number = {01},
 	Pages = {353--357},
 	Publisher = {Cambridge Univ Press},
-	Title = {Sperm whale abundance estimates from acoustic surveys of the Ionian Sea and Straits of Sicily in 2003},
+	Title = {Sperm whale abundance estimates from acoustic surveys of the {Ionian Sea and Straits of Sicily} in 2003},
 	Volume = {87},
 	Year = {2007}}
 
@@ -343,7 +356,7 @@
 	Number = {2},
 	Pages = {165--172},
 	Publisher = {Springer},
-	Title = {Estimation of population density of European pine marten in central Italy using camera trapping},
+	Title = {Estimation of population density of {European pine marten in central Italy using camera trapping}},
 	Volume = {57},
 	Year = {2012}}
 
@@ -355,7 +368,7 @@
 	Number = {5},
 	Pages = {3522--3535},
 	Publisher = {Acoustical Society of America},
-	Title = {Applying distance sampling to fin whale calls recorded by single seismic instruments in the northeast Atlantic},
+	Title = {Applying distance sampling to fin whale calls recorded by single seismic instruments in the northeast {Atlantic}},
 	Volume = {134},
 	Year = {2013}}
 
@@ -413,7 +426,7 @@
 	Number = {6},
 	Pages = {e99389},
 	Publisher = {Public Library of Science},
-	Title = {Trophic Scaling and Occupancy Analysis Reveals a Lion Population Limited by Top-Down Anthropogenic Pressure in the Limpopo National Park, Mozambique},
+	Title = {Trophic Scaling and Occupancy Analysis Reveals a Lion Population Limited by Top-Down Anthropogenic Pressure in the {Limpopo National Park, Mozambique}},
 	Volume = {9},
 	Year = {2014}}
 
@@ -425,7 +438,7 @@
 	Number = {5},
 	Pages = {1064--1074},
 	Publisher = {Wiley Online Library},
-	Title = {A continental-scale tool for acoustic identification of European bats},
+	Title = {A continental-scale tool for acoustic identification of {European bats}},
 	Volume = {49},
 	Year = {2012}}
 
@@ -553,7 +566,7 @@
 	Number = {3},
 	Pages = {307--316},
 	Publisher = {JSTOR},
-	Title = {Local passive acoustic monitoring of narwhal presence in the Canadian Arctic: a pilot project},
+	Title = {Local passive acoustic monitoring of narwhal presence in the {Canadian Arctic}: a pilot project},
 	Volume = {64},
 	Year = {2011}}
 
@@ -665,14 +678,17 @@
 	Volume = {123},
 	Year = {2006}}
 
-@article{kunz2009methods,
+@incollection{kunz2009methods,
+	Address = {Baltimore, Maryland},
 	Author = {Kunz, THOMAS H and Betke, M and Hristov, NICKOLAY I and Vonhof, M},
-	Date-Added = {2014-05-16 10:47:34 +0000},
-	Date-Modified = {2014-05-16 10:47:34 +0000},
-	Journal = {Ecological and behavioral methods for the study of bats (TH Kunz and S. Parsons, eds.). 2nd ed. Johns Hopkins University Press, Baltimore, Maryland},
+	Booktitle = {Ecological and behavioral methods for the study of bats},
+	Editor = {TH Kunz and S. Parsons},
 	Pages = {133--157},
+	Publisher = {Johns Hopkins University Press},
 	Title = {Methods for assessing colony size, population size, and relative abundance of bats},
+  Edition = {2nd},
 	Year = {2009}}
+
 
 @manual{sympy,
 	Author = {{SymPy Development Team}},
@@ -1065,7 +1081,7 @@
 	Number = {9},
 	Pages = {2409--2415},
 	Publisher = {Wiley Online Library},
-	Title = {Male dominance, paternity, and relatedness in the Jamaican fruit-eating bat (Artibeus jamaicensis)},
+	Title = {Male dominance, paternity, and relatedness in the {Jamaican} fruit-eating bat (Artibeus jamaicensis)},
 	Volume = {12},
 	Year = {2003}}
 
@@ -2554,15 +2570,7 @@
 	Volume = {138},
 	Year = {1996}}
 
-@incollection{Dietz_1976,
-	Address = {Berlin},
-	Author = {Dietz, K},
-	Booktitle = {Mathematical Models in Medicine},
-	Editor = {Berger, J and Buhler, W and Repges, R and Tautu, P},
-	Pages = {1--15},
-	Publisher = {Springer-Verlag},
-	Title = {The incidence of infectious diseases under the influence of seasonal fluctuations.},
-	Year = {1976}}
+
 
 @incollection{taxon,
 	Address = {Baltimore},
@@ -4629,7 +4637,7 @@ The seasonal movements of Eidolon helvum, Myonycteris torquata, and Nanonycteris
 	Number = {1349},
 	Pages = {193--198},
 	Publisher = {The Royal Society},
-	Title = {Extreme population structuring in the threatened ghost bat, Macroderma gigas: evidence from mitochondrial DNA},
+	Title = {Extreme population structuring in the threatened ghost bat, {Macroderma gigas}: evidence from {mitochondrial DNA}},
 	Volume = {257},
 	Year = {1994}}
 
@@ -4656,7 +4664,7 @@ The seasonal movements of Eidolon helvum, Myonycteris torquata, and Nanonycteris
 	Number = {1},
 	Pages = {39--44},
 	Publisher = {BioOne},
-	Title = {A test for sex-biased dispersal in Cynopterus sphinx: inferences from microsatellite markers and mitochondrial DNA},
+	Title = {A test for sex-biased dispersal in {Cynopterus sphinx}: inferences from microsatellite markers and mitochondrial {DNA}},
 	Volume = {14},
 	Year = {2012}}
 
