Marcus comments dealt with. Kates comments ongoing.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -3,8 +3,8 @@
 \usepackage[footnotesize]{caption}
 %\usepackage[usenames,dvipsnames]{color}
 %\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
-\usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage, subcaption,array,verbatim,setspace, siunitx,  flafter}
-\usepackage[running,displaymath, mathlines]{lineno} % running vs pagewise 
+\usepackage{amsfonts, fancyhdr, graphicx, lastpage, rotating, multirow, fixltx2e, stfloats, txfonts, palatino, url, xcolor, multicol, hanging, setspace, lscape, paralist, changepage, subcaption, array, verbatim, setspace, siunitx,  flafter}
+\usepackage[running, displaymath, mathlines]{lineno} % running vs pagewise 
 \usepackage{epstopdf}
 \captionsetup{
   format = plain,
@@ -111,7 +111,7 @@ Acoustic detection, camera traps, marine, population monitoring, simulations, te
 
 Animal population density is one of the fundamental measures in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{clark1995application, acevedo2006using, walters2012continental} are becoming widely used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
 
-Additional information must often be collected simultaneously to animal counts for existing methods for estimating density but this information is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated for occupancy, assumptions about the distribution of individuals must be made to estimate   \citep{royle2003estimating}. Furthermore repeat, independant surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}. Finally, information (and survey effort) is thrown away unless a removal sampling design is used \citep{mackenzie2005designing}.
+Additional information must often be collected simultaneously to animal counts for existing methods for estimating density but this information is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated for occupancy, information is thrown away. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independant surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
 
 More recently, the development of the random encounter model (REM), a modification of an ideal gas model \citep{Hutchinson_Waser_2007}, has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
@@ -284,22 +284,21 @@ There are a number of possible extensions to the gREM which could be developed i
 
 Interesting but unstudied problems impacting the gREM are firstly, edge effects caused by sensor trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera}, and secondly, sensors which repeatedly turn on an off during sampling \citep{jones2011indicator}. The second problem is particularly relevant to acoustic detectors which record ultrasound by time expansion. Here ultrasound is recorded for a set time period and then slowed down and played back, rendering the sensor 'deaf' periodically during sampling. Both of these problems may cause biases in the gREM, as animals can move through the detection zone without being detected. As the gREM assumes constant surveillance, the error created by switching the sensor on and off quickly will become more important if the sensor is only on for short periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls, then there could be a systematic underestimation of density. We recommend that the gREM is applied to constantly sampled data, and the impacts of breaking these assumptions on the gREM should be further explored. 
 
-Detection probability is a major focus for methods estimating denstity. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling does \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
+Detection probability is a major focus for methods estimating denstity. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling do \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
 
 \subsection*{Accuracy, Precision and Recommendations for Best Practice}
 Based on our simulations, we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However, the precision of the gREM differed between submodels. For example, when the sensor and signal width were small, the precision of the model was reduced. Therefore when choosing a sensor for use in a gREM study, the sensor detection width should be maximised. If the study species has a narrow signal directionality, other aspects of the study protocol, such as length of the survey, should be used to compensate. 
 
 The precision of the gREM is greatly affected by the number of captures. The coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, considered to a very good level of precision \citep{thomas2012passive}. Many current studies do not reach this level of precision, with most studies reporting coefficient of variations greater than the 10\% level \citep{o2003crouching, proctor2010ecological, foster2012critique}. The length of surveys in the field will need to be adjusted so that enough data can be collected to reach this precision level. Populations of fast moving animals or populations with high densities will require less survey effort than those species that are slow moving or have populations with low densities. However it should be noted that under live survey conditions, where there is uncertainty and natural variation around animal speeds, call and signal widths, it may take more captures to reach this level of precision.  
 
-% @liz I put in "long duration of our simulations has obscured this". We might want to remove/change it.
-The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks). It is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and we expect that the long duration of our simulations has obscured this. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
+The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks) though it is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and this might be evident given other simulation setups. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. Further work should use animal movement data to test the validity of gREM beyond simple movement models. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
 
 In our simulations we have assumed perfect estimates of parameter values. While estimates will never be perfect, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is taxon dependant although there are many commonalities. Estimates of $r$ can be measured directly or calculated using physical acoustic models (e.g. \citep{holderied2003echolocation}) while the sensor angle is often easily measured \citep{adams2012you}. Call directionality has been measured using arrays of microphones \citep{brinklov2011} though the measurements are rarely of $\alpha$ exactly. When estimating $v$ the measure used should be relevant to the timing of a survey; if a survey is continually running, then day range may be a good measures \citep{carbone2005far} whereas if a survey is only conducted when a species is active (e.g. dawn-dusk bat surveys) then estimates of the actual speed of movement may be more appropriate. 
 
 \subsection*{Limitations}
-Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
+Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted.  The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture-mark-recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
 
-Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation animals moved at a speed of $\SI{40}{\kilo\meter \per \day}$, equivalent to the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
+Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. Though theoretically unequal densities should not affect accuracy \citep{Hutchinson_Waser_2007}, it will affect precision and further simulations should be used to quantify this effect. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation animals moved at a speed of $\SI{40}{\kilo\meter \per \day}$, equivalent to the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
 
 
 
